[gd_scene load_steps=13 format=3 uid="uid://bodhf6ux4pew"]

[ext_resource type="Theme" uid="uid://dllmsymee4lsv" path="res://scenes/ui/game_ui_theme.tres" id="1_2yiqu"]
[ext_resource type="Script" uid="uid://docw7duy4hlop" path="res://scenes/ui/tools_panel.gd" id="2_a7ivs"]
[ext_resource type="Texture2D" uid="uid://deobj07fd56qe" path="res://assets/game/objects/basic_plants.png" id="2_xkgdf"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2yiqu"]
load_path = "res://.godot/imported/basic_tools_and_materials.png-5fbfb155963b9fe96058cf82f108c264.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_xkgdf"]
atlas = SubResource("CompressedTexture2D_2yiqu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xkgdf"]
load_path = "res://.godot/imported/basic_tools_and_materials.png-5fbfb155963b9fe96058cf82f108c264.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_a7ivs"]
atlas = SubResource("CompressedTexture2D_xkgdf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a7ivs"]
load_path = "res://.godot/imported/basic_tools_and_materials.png-5fbfb155963b9fe96058cf82f108c264.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_0jxvs"]
atlas = SubResource("CompressedTexture2D_a7ivs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbtgy"]
atlas = ExtResource("2_xkgdf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0jxvs"]
load_path = "res://.godot/imported/basic_plants.png-95b9b15040aa30969080ee5e6985e7ef.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_a6726"]
atlas = SubResource("CompressedTexture2D_0jxvs")
region = Rect2(0, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_2yiqu")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_a7ivs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_xkgdf")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_a7ivs")
icon_alignment = 1

[node name="WateringCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_0jxvs")
icon_alignment = 1

[node name="ToolCorn" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_gbtgy")
icon_alignment = 1

[node name="ToolTomato" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_a6726")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/WateringCan" to="." method="_on_watering_can_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolCorn" to="." method="_on_tool_corn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTomato" to="." method="_on_tool_tomato_pressed"]
